@@ -1,6 +1,30 @@
-;; this might be useful for dvorakers
-;; Ryan Yeske 
-;; $Id: nethack-keys-dvorak.el,v 1.2 2002/01/17 04:08:19 rcyeske Exp $
+;;; nethack-keys.el --- experimental dvorak key bindings
+
+;; Copyright (C) 2002  Ryan Yeske and Shawn Betts
+
+;; Author: Ryan C Yeske <rcyeske@vcn.bc.ca>
+;; Keywords: games
+
+;; This file is free software; you can redistribute it and/or modify
+;; it under the terms of the GNU General Public License as published by
+;; the Free Software Foundation; either version 2, or (at your option)
+;; any later version.
+
+;; This file is distributed in the hope that it will be useful,
+;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+
+;; You should have received a copy of the GNU General Public License
+;; along with GNU Emacs; see the file COPYING.  If not, write to
+;; the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+;; Boston, MA 02111-1307, USA.
+
+;;; Commentary:
+
+;; 
+
+;;; Code:
 
 (add-hook 'nethack-map-mode-hook
 	  (lambda ()
